# moral-summarization

./: LICENSE  README.md  evaluate.py  generate_prompts.py  hyperparameter_testing.py  peft_config.yaml  prompting.py  pyproject.toml  sequence_labeling.yaml  token_article_labeling.yaml  token_labeling.yaml  training.py
moral_summarization/: args.py  crowd.py  data_utils.py  dataset.py  eval.py  experts.py  metrics.py  model.py  prompts.py  utils.py
notebooks/: CoT_results.ipynb  crowd_results.ipynb  expert_evaluation.ipynb  get_summaries.ipynb  hyperparameters_results.ipynb
results/: Meta-Llama-3-70B-Instruct_345_summaries.csv  README.md  articles_in_test_set.txt  llama-8b-predictions-test-set.csv
results/automated_evaluation/: deepseek.pickle  llama_345_test_set.pickle  llama_commandr.pickle
results/crowd_evaluation/: annotators_scores.csv  article_scores.csv
results/expert_evaluation/results_annotated/: annotation_labels.txt
results/expert_evaluation/results_annotated/F/: answers.xlsx
results/expert_evaluation/results_raw/: anonymized_mappings.csv  articles_experts.csv
results/summaries/allsides/allsides_abortion_c_1/: cot_prompt.txt  cot_response_DeepSeek-R1-Distill-Qwen-32B_311.txt  cot_response_DeepSeek-R1-Distill-Qwen-32B_345.txt  cot_response_DeepSeek-R1-Distill-Qwen-32B_49.txt  cot_response_DeepSeek-R1-Distill-Qwen-32B_655.txt  cot_response_DeepSeek-R1-Distill-Qwen-32B_897.txt  cot_response_Meta-Llama-3-70B-Instruct_311.txt  cot_response_Meta-Llama-3-70B-Instruct_345.txt  cot_response_Meta-Llama-3-70B-Instruct_49.txt  oracle_prompt.txt  (+54 more)
(+26696 files in other folders)
