[project]
name = "moral-summarization"
description = "News summarization that preserves the moral angle of the original article"
version = "0.0.1"
authors = [
    { name = "Enrico Liscio", email = "e.liscio@tudelft.nl" },
]
dependencies = [
    "bitsandbytes==0.43.3",
    "inflect==7.3.1",
    "peft==0.12.0",
    "torch==2.3.0",
    "torchtext==0.18.0",
    "transformers==4.44.0",
    "trl==0.9.6",
    "scipy==1.14.1",
    "nltk==3.9.1",
    "safetensors==0.4.3"
]

[tool.setuptools]
py-modules = ["moral_summarization"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
